
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int C2C0 ;
 int C2C1 ;
 int CAM ;
 int CAS0 ;
 int CAS1 ;
 int CAS2 ;
 int EG ;
 int I2C0 ;
 int I2Q ;
 int MN ;
 int MS ;
 int NIU ;
 int OCM0 ;
 int PGN0 ;
 int PGN1 ;
 int PGN2 ;
 int PGN3 ;
 int PGND ;
 int PGNI ;
 int PGS0 ;
 int PGS1 ;
 int PGS2 ;
 int PGS3 ;
 int PGSD ;
 int PGSI ;
 int PH ;
 int PS ;
 int QMN ;
 int QMS ;
 int ROMUSB ;
 int RPMX0 ;
 int RPMX1 ;
 int RPMX2 ;
 int RPMX3 ;
 int RPMX4 ;
 int RPMX5 ;
 int RPMX6 ;
 int RPMX7 ;
 int SMB ;
 int SN ;
 int SQN0 ;
 int SQN1 ;
 int SQN2 ;
 int SQN3 ;
 int SQS0 ;
 int SQS1 ;
 int SQS2 ;
 int SQS3 ;
 int SRE ;
 int TIMR ;
 int XDMA ;
 int qla82xx_crb_addr_transform (int ) ;
 int qla82xx_crb_table_initialized ;

__attribute__((used)) static void qla82xx_crb_addr_transform_setup(void)
{
 qla82xx_crb_addr_transform(XDMA);
 qla82xx_crb_addr_transform(TIMR);
 qla82xx_crb_addr_transform(SRE);
 qla82xx_crb_addr_transform(SQN3);
 qla82xx_crb_addr_transform(SQN2);
 qla82xx_crb_addr_transform(SQN1);
 qla82xx_crb_addr_transform(SQN0);
 qla82xx_crb_addr_transform(SQS3);
 qla82xx_crb_addr_transform(SQS2);
 qla82xx_crb_addr_transform(SQS1);
 qla82xx_crb_addr_transform(SQS0);
 qla82xx_crb_addr_transform(RPMX7);
 qla82xx_crb_addr_transform(RPMX6);
 qla82xx_crb_addr_transform(RPMX5);
 qla82xx_crb_addr_transform(RPMX4);
 qla82xx_crb_addr_transform(RPMX3);
 qla82xx_crb_addr_transform(RPMX2);
 qla82xx_crb_addr_transform(RPMX1);
 qla82xx_crb_addr_transform(RPMX0);
 qla82xx_crb_addr_transform(ROMUSB);
 qla82xx_crb_addr_transform(SN);
 qla82xx_crb_addr_transform(QMN);
 qla82xx_crb_addr_transform(QMS);
 qla82xx_crb_addr_transform(PGNI);
 qla82xx_crb_addr_transform(PGND);
 qla82xx_crb_addr_transform(PGN3);
 qla82xx_crb_addr_transform(PGN2);
 qla82xx_crb_addr_transform(PGN1);
 qla82xx_crb_addr_transform(PGN0);
 qla82xx_crb_addr_transform(PGSI);
 qla82xx_crb_addr_transform(PGSD);
 qla82xx_crb_addr_transform(PGS3);
 qla82xx_crb_addr_transform(PGS2);
 qla82xx_crb_addr_transform(PGS1);
 qla82xx_crb_addr_transform(PGS0);
 qla82xx_crb_addr_transform(PS);
 qla82xx_crb_addr_transform(PH);
 qla82xx_crb_addr_transform(NIU);
 qla82xx_crb_addr_transform(I2Q);
 qla82xx_crb_addr_transform(EG);
 qla82xx_crb_addr_transform(MN);
 qla82xx_crb_addr_transform(MS);
 qla82xx_crb_addr_transform(CAS2);
 qla82xx_crb_addr_transform(CAS1);
 qla82xx_crb_addr_transform(CAS0);
 qla82xx_crb_addr_transform(CAM);
 qla82xx_crb_addr_transform(C2C1);
 qla82xx_crb_addr_transform(C2C0);
 qla82xx_crb_addr_transform(SMB);
 qla82xx_crb_addr_transform(OCM0);



 qla82xx_crb_addr_transform(I2C0);

 qla82xx_crb_table_initialized = 1;
}
